fix(css): fix contrast of overscroll-behaviour

--- a/live-examples/css-examples/basic-box-model/overscroll-behavior.css
+++ b/live-examples/css-examples/basic-box-model/overscroll-behavior.css
@@ -15,7 +15,7 @@
 #example-element {
     width: 50%;
     height: 12em;
-    border: medium dotted #1b76c4;
+    border: medium dotted #009e5f;
     padding: 0.3em;
     margin: 0 0.3em;
     text-align: left;
